<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/mnDifficulty"
        android:title="@string/show">
        <menu>
            <item
                android:id="@+id/mnFavorites"
                android:icon="@drawable/img_favorite_checked"
                android:title="@string/favorites"
                app:showAsAction="never" />

            <item
                android:id="@+id/mnAllDifficulty"
                android:title="@string/all"
                android:icon="@drawable/all_difficulty_circle"
                app:showAsAction="never" />
            <item
                android:id="@+id/mnEasyDifficulty"
                android:icon="@drawable/easy_difficulty_circle"
                android:title="@string/difficulty_0"
                app:showAsAction="never" />
            <item
                android:id="@+id/mnMiddleDifficulty"
                android:icon="@drawable/middle_difficulty_circle"
                android:title="@string/difficulty_1"
                app:showAsAction="never" />
            <item
                android:id="@+id/mnMiddleHardDifficulty"
                android:icon="@drawable/middle_hard_difficulty_circle"
                android:title="@string/difficulty_2"
                app:showAsAction="never" />
            <item
                android:id="@+id/mnHardDifficulty"
                android:icon="@drawable/hard_difficulty_circle"
                android:title="@string/difficulty_3"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/mnRateApp"
        android:title="@string/show_in_google_play"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnAbout"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnClose"
        android:title="@string/close"
        app:showAsAction="never" />
</menu>