<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jlab.desserts.Activity.DessertDetailsActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rlDessertImage">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:id="@+id/ivDessert"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/tvDifficulty"
                    android:paddingBottom="5dp"
                    android:paddingRight="13dp"
                    android:textSize="@dimen/text_size_big"
                    android:paddingEnd="13dp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-45dp"
                android:id="@+id/rlDescription">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dessert_details"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="25dp"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:id="@+id/tvDescriptionTitle"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvDessertDescription"
                        android:textSize="15dp"
                        android:layout_margin="5dp"
                        android:layout_marginBottom="0dp"
                        android:textColor="@color/black"/>

                    <com.google.android.gms.ads.AdView
                        android:id="@+id/adView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        ads:adSize="BANNER"
                        ads:adUnitId="@string/banner_ad_unit_id3"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients"
                        android:textAlignment="center"
                        android:textSize="25dp"
                        android:textColor="@color/black"
                        android:id="@+id/tvIngredientsTitle"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvDessertIngredients"
                        android:textSize="15dp"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prep_description"
                        android:textAlignment="center"
                        android:textSize="25dp"
                        android:textColor="@color/black"
                        android:id="@+id/tvPrepDescriptionTitle"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvDessertPrepDescription"
                        android:textSize="15dp"
                        android:layout_margin="5dp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
